--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,12 +12,12 @@ services:
 
       KC_HOSTNAME: localhost
       KC_HOSTNAME_PORT: 8080
-      KC_HOSTNAME_STRICT: 0
-      KC_HOSTNAME_STRICT_HTTPS: 1
+      KC_HOSTNAME_STRICT: "false"
+      KC_HOSTNAME_STRICT_HTTPS: "true"
 
       KC_LOG_LEVEL: info
-      KC_METRICS_ENABLED: 1
-      KC_HEALTH_ENABLED: 1
+      KC_METRICS_ENABLED: "true"
+      KC_HEALTH_ENABLED: "true"
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
     command: start-dev
