--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,21 @@
 version: '3.6'
 
 services:
-  postgres:
-      image: postgres
-      volumes:
-        - postgres_data:/var/lib/postgresql/data
-      environment:
-        POSTGRES_DB: keycloak
-        POSTGRES_USER: keycloak
-        POSTGRES_PASSWORD: password
+  postgres:  # Renamed from `postgres` to `keycloakdb` if you prefer the name `keycloakdb`
+    image: postgres:15
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: keycloak
+      POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: password
+
   keycloak_web:
     image: quay.io/keycloak/keycloak:23.0.7
     container_name: keycloak_web
     environment:
       KC_DB: postgres
-      KC_DB_URL: jdbc:postgresql://keycloakdb:5432/keycloak
+      KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak  # Adjusted to match service name
       KC_DB_USERNAME: keycloak
       KC_DB_PASSWORD: password
 
@@ -30,18 +31,9 @@ services:
       KEYCLOAK_ADMIN_PASSWORD: admin
     command: start-dev
     depends_on:
-      - keycloakdb
+      - postgres  # Corrected to match the actual service name
     ports:
       - 8090:8080
-
-  keycloakdb:
-    image: postgres:15
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_DB: keycloak
-      POSTGRES_USER: keycloak
-      POSTGRES_PASSWORD: password
 
 volumes:
   postgres_data:
