--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,7 @@ services:
       KC_DB_PASSWORD: password
 
       KC_HOSTNAME: auth.deepmd.io
+      KC_PROXY: edge
       KC_HOSTNAME_PORT: 8080
       KC_HOSTNAME_STRICT: "false"
       KC_HOSTNAME_STRICT_HTTPS: "true"
