--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
       KC_PROXY: edge
       KC_HOSTNAME_PORT: 8080
       KC_HOSTNAME_STRICT: "false"
-      KC_HOSTNAME_STRICT_HTTPS: "true"
+      KC_HOSTNAME_STRICT_HTTPS: "false"
 
       KC_LOG_LEVEL: info
       KC_METRICS_ENABLED: "true"
