--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,7 @@ services:
       KC_DB_USERNAME: keycloak
       KC_DB_PASSWORD: password
 
-      KC_HOSTNAME: auth.deepmd.io
+      KC_HOSTNAME: 0.0.0.0
       KC_PROXY: edge
       KC_HOSTNAME_PORT: 8080
       KC_HOSTNAME_STRICT: "false"
