--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       POSTGRES_PASSWORD: password
 
   keycloak_web:
-    image: quay.io/keycloak/keycloak:23.0
+    image: quay.io/keycloak/keycloak:20.0.0-0
     container_name: keycloak_web
     environment:
       KC_DB: postgres
