--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,7 @@ services:
       KC_DB_USERNAME: keycloak
       KC_DB_PASSWORD: password
 
-      KC_HOSTNAME: 0.0.0.0
+      KC_HOSTNAME: auth.deepmd.io
       KC_PROXY: edge
       KC_HOSTNAME_PORT: 8080
       KC_HOSTNAME_STRICT: "false"
@@ -31,13 +31,13 @@ services:
       KC_HEALTH_ENABLED: "true"
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
-      BIND_ADDRESS: 0.0.0.0
+      
     command: start-dev
     depends_on:
       - postgres  # Corrected to match the actual service name
     ports:
       - 8090:8080
-      - ":::8091:8080"
+      
 
 volumes:
   postgres_data:
