--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,26 +11,16 @@ services:
       POSTGRES_PASSWORD: password
 
   keycloak_web:
-    image: quay.io/keycloak/keycloak:23.0.2-0
-    container_name: keycloak_web
-    environment:
-      KC_DB: postgres
-      KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak  # Adjusted to match service name
-      KC_DB_USERNAME: keycloak
-      KC_DB_PASSWORD: password
-
-      KC_HOSTNAME: auth.deepmd.io
-      KC_PROXY: edge
-      KC_HOSTNAME_PORT: 8080
-      KC_HOSTNAME_STRICT: "false"
-      KC_HOSTNAME_STRICT_HTTPS: "false"
-      KC_HTTP_ENABLED: "true"
-
-      KC_LOG_LEVEL: info
-      KC_METRICS_ENABLED: "true"
-      KC_HEALTH_ENABLED: "true"
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
+    image: quay.io/keycloak/keycloak:legacy
+      environment:
+        DB_VENDOR: POSTGRES
+        DB_ADDR: postgres
+        DB_DATABASE: keycloak
+        DB_USER: keycloak
+        DB_SCHEMA: public
+        DB_PASSWORD: password
+        KEYCLOAK_USER: admin
+        KEYCLOAK_PASSWORD: P@dmini2
       
     command: start-dev
     depends_on:
